--- a/components/backend-tests-go-mewuwfyj/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-mewuwfyj/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-mewuwfyj
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-mewuwfyj:e3df0d25952136da4f743b13dc19ef334de02ed6@sha256:21a559390d1e6a935826f22ed25fff50262dc5410bebf6d6b1014e4a234cbb88
+          name: container-image
